--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     background-position: center top; 
     margin: 0; /* Removing margin to prevent unwanted spaces */
     background-size: 50% 2980px;
-    height: 2992px;
+    height:2992px;
 }
 
 
@@ -426,3 +426,66 @@ text-align: left;
         margin-top: 20rem;
     }
 }
+.hidden{
+    filter: blur(5px);
+    opacity: 0;
+    transition: all 1.7s;
+}
+.show{
+    filter: blur(0px);
+    opacity: 1;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    top: 0;
+    left: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    backdrop-filter: blur(10px); /* Apply blur effect to the background */
+    transition: transform 0s;
+    z-index: 10000;
+  }
+  
+  .modal-content {
+   
+    width: 500px; /* Full width */
+    height: 600px; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: #fefefe;
+    padding: 20px;
+    border: 1px solid #888;
+    color: black;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    text-align: center; /* Center the text within the modal */
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  .blur{
+    filter: blur(8px);
+  }
+  .window{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%; /* this will make the height equal to the height of the viewport */
+    width: 100%; /* this will make the width equal to the width of the viewport */
+  
+  }
+  
